--- a/index.html
+++ b/index.html
@@ -1,141 +1,178 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {
-        'packages':['geochart'],
-        // Note: you will need to get a mapsApiKey for your project.
-        // See: https://developers.google.com/chart/interactive/docs/basic_load_libs#load-settings
-        'mapsApiKey': 'AIzaSyD-9tSrke72PouQMnMX-a7eZSW0jkFMBWY'
-      });
-      google.charts.setOnLoadCallback(drawRegionsMap);
-
-      function drawRegionsMap() {
-        var data = google.visualization.arrayToDataTable([
-          ['Country', 'Popularity'],
-          ['SA', 700],
-          ['Iran', 700],
-       ['Jordan', 250],
-        ['Syria', 600],
-        ['Iraq', 550],
-        ['Yemen', 500],
-		['UAE', 300],
-		['Oman', 300],
-		['Qatar', 500],
-		['Bahrain', 200],
-		['Israel', 700],
-		['Kuwait', 200],
-		['Egypt', 650],
-		['Turkey', 700],
-		['Azerbaijan', 500],
-		['Armenia', 400],
-		['Afghanistan', 650],
-		['Pakistan', 650],
-		['Turkmenistan', 450],
-		['Uzbekistan', 500],
-		['KG', 300],
-		['Kazakhstan', 300],
-		['Lebanon', 500],
-		['Libya', 600],
-		['Tunisia', 400],
-		['Sudan', 500],
-		['Somalia', 500],
-		['Chad', 300],
-		['Algeria', 500],
-		['Niger', 200],
-		['Mali', 300],
-		['Morocco', 550],
-		['South Sudan', 400],
-		['Tanzania', 250],
-		['Mozambique', 250],
-		['Malaysia', 500],
-		['Maldives', 200],
-		['Indonesia', 600],
-		['BA', 400],
-		['Singapore', 500],
-		['Ethiopia', 300],
-		['Mauritania', 400],
-		['Eritrea', 400],
-        ]);
-
-        var options = {};
-
-        var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
-
-        chart.draw(data, options);
-		
-		
-      }
-	  
-	  //menu
-		var cnum = 26;
-		var l;
-
-		function check() {
-		  cnum+=25;
-			return cnum;
-		}
-
-		function reload(){
-			var container = document.getElementById("menu");
-			var content = container.innerHTML;
-			container.innerHTML= content; 
-			
-
-		}
-
-
-		function toggle() {
-		  var x = document.getElementById("menu");
-		  if (x.style.display === "none") {
-			x.style.display = "block";
-		  } else {
-			x.style.display = "none";
-		  }
-		}
-    </script>
+<html lang="en">
+<head>
+	<title>**Restricted Site [FBI Notified]**</title>
+	<meta charset="utf-8">
 	<style>
-
-	aside{
-		position: absolute;
-		text-align: center;
-		background-color: slateGrey;
-		border: 2px solid black;
-		bottom: 5px;
-		left:5px;
-		padding: 20px;
-		width:20%;
-		height:20%;
-	}
-
-
-
-	</style>
-  </head>
-  <body>
-	<button onclick="toggle()">Click Me</button>
-	<button onclick="check()">check1</button>
-	<button onclick="reload()">reload</button>
-
 	
-
-	
-    <div id="regions_div" style="width: 900px; height: 500px;"></div>
-	
-	
-	<aside id="menu">
-		<h1>Menu</h1>
-		<p>Current Number: <script type="text/javascript">
-								document.write(cnum)
-							</script>
-		</p>
-		<p>Loyalty: </p>
+		section {
+			background-color: white;
+			border-radius: 25px;
+			position: fixed;
+			left: 25%;
+			width: 50%;
+			top:20px;
+			bottom: 20px;
+			padding: 40px
+		}
 		
-	</aside>
+		*,
+		*::after,
+		*::before {
+		  margin: 0;
+		  padding: 0;
+		  box-sizing: inherit;
+		  font-size: 62,5%;
+		}
+		canvas {
+		  display:block;
+		  margin: 40px auto 20px;
+		  border: 1px solid #333;
+		  box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+		}
+
+		p, a {
+		  font-family: Helvetica, Arial, sans-serif;
+		  font-size: 19px;
+		  color: #777;
+		  display: block;
+		  width: 400px;
+		  margin: 0 auto;
+		  text-align: center;
+		  text-decoration:none;
+		}
+
+		.info {
+		  margin:14px auto;
+		  text-align: justify;
+		  font-size: 18px;
+		  color: #999;
+		}
+
+		a {
+		  color:#3377ee;
+		}
+		
+
 	
-	<footer>
-	<p>Made By Nabeel Syed</p>
+	</style>
+
+	<script>
+	/*
+	var r = confirm("Press a button!");
+	if (r == true) {
+	  txt = "You pressed OK!";
+	} else {
+	  txt = "You pressed Cancel!";
+	}
+	*/
+	
+	
+	
+	
+    function validate() {
+        var password = document.getElementById("password").value;
+		var boi_get_wreckt = ["1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2",
+		"3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "4", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "5", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "1", "2", "3", "9", "2", "3", "1", "2", "6", "1", "2", "3", "1", "2", "3"]; 
+		
+		var check1 = 282 % 185;
+		var check2 = 1186 % 16 * 127;
+		var check3 = (16 % 4) % 160 % 11 + 200 + 80 + 7;
+		var check4 = 300%298 * 141;
+		var stop = boi_get_wreckt[check1] + boi_get_wreckt[check2] + boi_get_wreckt[check3] + boi_get_wreckt[check4];
+        if (password == stop)
+		{
+            alert("Login successfully");
+			document.getElementById("login").hidden = true;
+			document.getElementById("main").hidden = false;
+			//location.href = "ggg.html"
+        }
+        return false;
+    }
+	</script>
+
+
+</head>
+<body style="background-image: url(wallpaper.jpg);>
+
+	<h1 style="text-align: center">Title Of the Website...</h1>
+	
+	
+	<section id="space">
+	
+		<form id="login" method="post" name="login_input">
+		<label>Code :</label>
+		<input type="password" name="password" id="password"/>
+		<input type="button" value="Login" id="submit" onclick="validate()"/>
+		</form>
+		
+		
+		<article id="main" hidden>
+			
+			<canvas id="canvas"></canvas>
+			<script src="gaem.js"></script>
+			
+		</article>
+	
+	
+	</section>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<footer style = "position:fixed; bottom:0; left: 50%; text-align:center">
+	<p>&copy; Foster WT 2015.</p>
 	</footer>
-  </body>
+	
+	
+
+	
+	
+	
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
