--- a/index.html
+++ b/index.html
@@ -53,8 +53,38 @@
 		  color:#3377ee;
 		}
 		
+		label {
+			font-family: "Century Gothic"
+		}
+		
+		#password {
+			
+			padding: 12px 20px;
+			margin: 8px 0;
+			box-sizing: border-box;
+		}
+		
+		#submit {
+			display: inline-block;
+			padding: 10px 20px;
+			font-size: 24px;
+			cursor: pointer;
+			text-align: center;
+			text-decoration: none;
+			outline: none;
+			color: #fff;
+			background-color: purple;
+			border: none;
+			border-radius: 15px;
+			box-shadow: 0 9px #999;
+		}
+		#submit:hover {background-color: #1c0847}
 
-	
+		#submit:active {
+		  background-color: #24026e;
+		  box-shadow: 0 5px #666;
+		  transform: translateY(4px);
+		}
 	</style>
 
 	<script>
