--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>**Restricted Site [FBI Notified]**</title>
+	<title>NSPQ</title>
 	<meta charset="utf-8">
 	<style>
 	
